--- a/code/Sinhala/Google Cloud Vision/Connect_processor.ipynb
+++ b/code/Sinhala/Google Cloud Vision/Connect_processor.ipynb
@@ -80,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace with your actual values\n",
-    "project_id = 'stellar-envoy-455606-j8'\n",
+    "project_id = 'project_id'\n",
     "location = \"us\"\n",
-    "processor_id = \"a839257885a6b10a\"\n",
+    "processor_id = \"processor_id\"\n",
     "file_path = \"example_text_ransaka.jpg\""
    ]
   },
