--- a/code/Tamil/Google_Document_AI/Connect_processor.ipynb
+++ b/code/Tamil/Google_Document_AI/Connect_processor.ipynb
@@ -71,13 +71,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO(developer): Uncomment these variables before running the sample.\n",
-    "project_id = 'stellar-envoy-455606-j8'\n",
-    "location = 'https://us-documentai.googleapis.com/v1/projects/1018205216627/locations/us/processors/a839257885a6b10a' # Format is 'us' or 'eu'"
+    "project_id = 'project_id'\n",
+    "location = 'processor_location' # Format is 'us' or 'eu'"
    ]
   },
   {
@@ -115,14 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace with your actual values\n",
-    "project_id = 'stellar-envoy-455606-j8'\n",
+    "project_id = 'project_id'\n",
     "location = \"us\"\n",
-    "processor_id = \"a839257885a6b10a\"\n",
+    "processor_id = \"processor_id\"\n",
     "file_path = \"example_text_ransaka.jpg\""
    ]
   },
